{
  "version": 4,
  "terraform_version": "1.0.10",
  "serial": 186,
  "lineage": "69a292ce-bdec-a0a2-8e01-3479283f162f",
  "resources": [
    {
      "module": "module.ec2_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-061ac2e015473fbe2",
            "arn": "arn:aws:ec2:us-east-1:919471634161:instance/i-08f095e04460db136",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08f095e04460db136",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vockey",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0639c516182560ea3",
            "private_dns": "ip-10-0-1-9.ec2.internal",
            "private_ip": "10.0.1.9",
            "public_ip": "54.85.117.5",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ff85559440467887",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0d4fc9f7f3cff8347",
            "tags": {
              "Name": "Ben-web-server"
            },
            "tags_all": {
              "Name": "Ben-web-server"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "Ben-web-server"
            },
            "vpc_security_group_ids": [
              "sg-0c5f974201f6d6543"
            ]
          },
          "dependencies": [
            "data.aws_ami.amistuff",
            "data.aws_availability_zones.available",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.web-server-sg.aws_security_group.this",
            "module.web-server-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:internet-gateway/igw-0b428eccc2631c417",
            "id": "igw-0b428eccc2631c417",
            "owner_id": "919471634161",
            "tags": {
              "Name": "Fall2021finalVPC"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC"
            },
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0b428eccc2631c417",
            "id": "r-rtb-054f56bdc8060a7961080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-054f56bdc8060a796",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:route-table/rtb-0594a144a489e45a4",
            "id": "rtb-0594a144a489e45a4",
            "owner_id": "919471634161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Fall2021finalVPC-private-use1-az2"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC-private-use1-az2"
            },
            "timeouts": null,
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:route-table/rtb-0fbcf8600fa88c350",
            "id": "rtb-0fbcf8600fa88c350",
            "owner_id": "919471634161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Fall2021finalVPC-private-use1-az4"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC-private-use1-az4"
            },
            "timeouts": null,
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:route-table/rtb-054f56bdc8060a796",
            "id": "rtb-054f56bdc8060a796",
            "owner_id": "919471634161",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Fall2021finalVPC-public"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-096d603280067aa85",
            "route_table_id": "rtb-0594a144a489e45a4",
            "subnet_id": "subnet-03480a5d57d6c367c"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc44114dbd1f58e5",
            "route_table_id": "rtb-0fbcf8600fa88c350",
            "subnet_id": "subnet-06bf172a67a366ab3"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0061b1e9da1b9bc42",
            "route_table_id": "rtb-054f56bdc8060a796",
            "subnet_id": "subnet-0d4fc9f7f3cff8347"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-075302d5980aa49d0",
            "route_table_id": "rtb-054f56bdc8060a796",
            "subnet_id": "subnet-0c365dc5506329889"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:subnet/subnet-03480a5d57d6c367c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-03480a5d57d6c367c",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919471634161",
            "tags": {
              "Name": "Fall2021finalVPC-private-use1-az2"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC-private-use1-az2"
            },
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:subnet/subnet-06bf172a67a366ab3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-06bf172a67a366ab3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "919471634161",
            "tags": {
              "Name": "Fall2021finalVPC-private-use1-az4"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC-private-use1-az4"
            },
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:subnet/subnet-0d4fc9f7f3cff8347",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0d4fc9f7f3cff8347",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919471634161",
            "tags": {
              "Name": "Fall2021finalVPC-public-use1-az2"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC-public-use1-az2"
            },
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:subnet/subnet-0c365dc5506329889",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0c365dc5506329889",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "919471634161",
            "tags": {
              "Name": "Fall2021finalVPC-public-use1-az4"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC-public-use1-az4"
            },
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:vpc/vpc-045146c0a9cdea988",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-01ead5136f1761cdf",
            "default_route_table_id": "rtb-0481d9254773df7c7",
            "default_security_group_id": "sg-059d0d2964b0ca403",
            "dhcp_options_id": "dopt-40fb1e3d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-045146c0a9cdea988",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0481d9254773df7c7",
            "owner_id": "919471634161",
            "tags": {
              "Name": "Fall2021finalVPC"
            },
            "tags_all": {
              "Name": "Fall2021finalVPC"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web-server-sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:919471634161:security-group/sg-0c5f974201f6d6543",
            "description": "security group for webserver allow ALL traffic",
            "egress": [],
            "id": "sg-0c5f974201f6d6543",
            "ingress": [],
            "name": "web-sg-20211209215335984500000001",
            "name_prefix": "web-sg-",
            "owner_id": "919471634161",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "web-sg"
            },
            "tags_all": {
              "Name": "web-sg"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-045146c0a9cdea988"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.web-server-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-766955706",
            "ipv6_cidr_blocks": [
              "::/0"
            ],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c5f974201f6d6543",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web-server-sg.aws_security_group.this",
            "module.web-server-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    },
    {
      "module": "module.web-server-sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "All protocols",
            "from_port": -1,
            "id": "sgrule-2143837890",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-0c5f974201f6d6543",
            "self": false,
            "source_security_group_id": null,
            "to_port": -1,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.web-server-sg.aws_security_group.this",
            "module.web-server-sg.aws_security_group.this_name_prefix"
          ]
        }
      ]
    }
  ]
}